fix(ci): resolve 4 PR #15 CI failures
- PlaywrightFactory.java: Thread.getId() replaces threadId() (Java 17
  compat; threadId() is Java 19+)
- security-sast.yml: replace broken google/osv-scanner-action@v1 with
  direct CLI binary download (v2.0.2)
- cortex-recorder-tests.yml: move github.event_name + inputs.tag to
  env: intermediaries to satisfy Semgrep run-shell-injection rule
- trace.mjs: sort tcById / orphan arrays before output so --check
  produces deterministic comparison (glob order is non-deterministic);
  regenerate traceability.csv with stable ordering

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>